# ternative

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  funding.json  run_server.bat
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cuda/: ops_cuda.cu
include/ternative/: cache.h  gguf.h  gguf_write.h  model.h  ops.h  request.h  sampler.h  server.h  stream.h  tensor.h  tokenizer.h
scripts/: build.bat  build.ps1  build.sh
src/: cache.cpp  gguf.cpp  gguf_write.cpp  main.cpp  model.cpp  ops_cpu.cpp  request.cpp  sampler.cpp  server.cpp  stream.cpp  tensor.cpp  tokenizer.cpp
